# secureGen

./: CMakeLists.txt  README.md  out.txt
src/: CMakeLists.txt  algorithm.hpp  binarytree.h  main copy 0127.cpp  main copy.cpp  merkletree.h  role.hpp  timer.hpp  typedef.hpp  util.hpp
src/test/: CMakeLists.txt  test_confirm.cpp  test_he.cpp  test_merkle.cpp
